# AndroidPortal

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/jaeckel/androidportal/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jaeckel/androidportal/: AndroidPortalApplication.kt  MainActivity.kt  TimberAppender.kt  TrueblocksViewModel.kt
app/src/main/java/com/jaeckel/androidportal/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/raw/: log4j2.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/resources/: bootnodes.json  log4j.xml  log4j2.xml
app/src/test/java/com/jaeckel/androidportal/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
trin-jni-wrapper/: Cargo.toml
trin-jni-wrapper/src/: lib.rs
