[package]
name = "trin-jni-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trin_jni_wrapper"
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[dependencies]
#trin = { git = "https://github.com/biafra23/trin/", branch = "build-lib" }
trin = { path = "../trin/" }
# tokio-1.37.0
tokio = { path = "../tokio/tokio" }
ethportal-api = { path = "../trin/ethportal-api" }
jni = "0.19.0"
android_logger = "0.13.3"
log = "0.4.21"
futures = "0.3.21"
tracing = "0.1.36"
num_cpus = "1.16.0"
#tokio = "1.37.0"
